--- a/waybar/Makefile
+++ b/waybar/Makefile
@@ -1,7 +1,17 @@
-FEDORA_VERSION_ID = 36
-CONTAINER_NAME=waybar
-CONTAINER_VERSION = 0.0.1
+include ../lib/defines
 
-.PHONY $(CONTAINER_NAME):
+CONTAINER_NAME = waybar
+CONTAINER_VERSION = 0.0.2
+WORKING_DIR=$(HOME_PATH)/git/cpp/Waybar
+
+.PHONY: $(CONTAINER_NAME) run
+
+$(CONTAINER_NAME):
 	$(LIB_BUILD_CONTAINER)
+
+.SILENT:
+run:
+	$(LIB_BUILD_IF_REQUIRED)
+	$(LIB_RUN_CONTAINER_AS_USER)
+	$(LIB_EXEC_CONTAINER_WITH_WORKING_DIR)
 
