update packages, add DEVSPACE shell indicator
Signed-off-by: Louis DeLosSantos <louis.delos@gmail.com>

--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -23,4 +23,4 @@ run:
 		--user $(UID):$(GID) \
 		--name $(CONTAINER_NAME) \
 		 $(CONTAINER_TAG) 2> /dev/null
-	$(RUNTIME) exec -it -w $(EBF_DIR) $(CONTAINER_NAME) zsh
+	$(RUNTIME) exec -it -w $(WORKING_DIR) $(CONTAINER_NAME) zsh
