--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -2,7 +2,7 @@ include ../lib/defines
 
 CONTAINER_NAME = ebpf
 CONTAINER_VERSION = 0.0.1
-WORKING_DIR = $(HOME_PATH)/git/ebpf
+WORKING_DIR = $(HOME_PATH)/git/c
 
 .PHONY: $(CONTAINER_NAME) run
 
@@ -12,15 +12,5 @@ $(CONTAINER_NAME):
 .SILENT:
 run:
 	$(LIB_BUILD_IF_REQUIRED)
-	# allow fail, you'll just attach next to the running container.
-	-$(RUNTIME) run -d --privileged \
-		-l devspace \
-		-v $(SYS_PATH):$(SYS_PATH) \
-		-v /etc/group:/etc/group:ro \
-		-v /etc/passwd:/etc/passwd:ro \
-		-v /etc/shadow:/etc/shadow:ro \
-		-v $(HOME_PATH):$(HOME_PATH) \
-		--user $(UID):$(GID) \
-		--name $(CONTAINER_NAME) \
-		 $(CONTAINER_TAG) 2> /dev/null
-	$(RUNTIME) exec -it -w $(WORKING_DIR) $(CONTAINER_NAME) zsh
+	$(LIB_RUN_CONTAINER_AS_USER)
+	$(LIB_EXEC_CONTAINER_WITH_WORKING_DIR)
