--- a/desktop-devel/Makefile
+++ b/desktop-devel/Makefile
@@ -2,7 +2,7 @@ include ../lib/defines
 
 CONTAINER_NAME = desktop-devel
 CONTAINER_VERSION = 0.0.1
-WORKING_DIR = $(HOME_PATH)/git/gtk
+WORKING_DIR ?= $(HOME_PATH)
 
 .PHONY: $(CONTAINER_NAME) run
 
