--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -2,7 +2,7 @@ include ../lib/defines
 
 CONTAINER_NAME = ebpf
 CONTAINER_VERSION = 0.0.1
-WORKING_DIR = $(HOME_PATH)
+WORKING_DIR ?= $(HOME_PATH)
 
 .PHONY: $(CONTAINER_NAME) run
 
