--- a/home/Dockerfile
+++ b/home/Dockerfile
@@ -10,9 +10,9 @@ RUN dnf install -y bat bear iproute iproute-tc kitty \
     nnn scdoc meson flex \
     bison procs kubernetes-client helm npm \
     llvm gdb elfutils-libelf-devel openssl-devel dwarves zstd \
-    tcpdump iputils rsync ncurses-devel zig strace
+    tcpdump iputils rsync ncurses-devel zig strace socat
 
-RUN dnf copr enable agriffis/neovim-nightly; \
+RUN dnf copr enable agriffis/neovim-nightly -y && \
     sudo dnf install -y neovim
 
 RUN git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf; \
