use golang update script instead of hard coding version

--- a/home/Dockerfile
+++ b/home/Dockerfile
@@ -2,10 +2,10 @@ ARG version_id=
 FROM fedora:$version_id
 
 RUN dnf install -y bat bear iproute iproute-tc kitty \
-    clang clang-tools-extra exa fd-find \
+    clang clang-tools-extra fd-find \
     fuse-sshfs fzf htop jq nmap \
     the_silver_searcher ripgrep \
-    zsh gh rust cmake man man-pages man-db \
+    zsh gh rust eza cmake man man-pages man-db \
     nodejs-bash-language-server \
     nnn scdoc meson flex \
     bison procs kubernetes-client helm npm \
@@ -19,14 +19,13 @@ RUN git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf; \
     ~/.fzf/install
 
 RUN git clone https://github.com/ldelossa/dotfiles.git ~/git/dotfiles; \
-    cd ~/git/dotfiles; make all; 
+    cd ~/git/dotfiles; make link-configs; 
 
 RUN git clone --recursive https://github.com/changs/slimzsh.git ~/.slimzsh
 
-RUN cd /tmp; \
-    curl -LO https://go.dev/dl/go1.20.linux-amd64.tar.gz; \
-    sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf go1.20.linux-amd64.tar.gz; \
-    rm -rf go1.20.linux-amd64.tar.gz
+run cd /tmp; \
+    git clone https://github.com/udhos/update-golang.git && \
+	cd update-golang && ./update-golang.sh
 
 RUN cd ~/git/lua; \
     curl -LO https://github.com/sumneko/lua-language-server/releases/download/3.4.2/lua-language-server-3.4.2-linux-x64.tar.gz; \
