--- a/home/Dockerfile
+++ b/home/Dockerfile
@@ -10,7 +10,8 @@ RUN dnf install -y bat bear iproute iproute-tc kitty \
     nnn scdoc meson flex \
     bison procs kubernetes-client helm npm \
     llvm gdb elfutils-libelf-devel openssl-devel dwarves zstd \
-    tcpdump iputils rsync ncurses-devel zig strace socat
+    tcpdump iputils rsync ncurses-devel zig strace socat \
+	systemd-udev
 
 RUN dnf copr enable agriffis/neovim-nightly -y && \
     sudo dnf install -y neovim
